# edda

./: README.md
data/automotive/: renault.xml
data/avionics/: airbus_simplified.xml
data/medical/: device_ensemble.xml  surgical_nav_system.xml
data/power_grid/: resort_substation_network.xml
data/topologies_5switch_10link/: topology_1-2.xml
data/topologies_5switch_4link/: topology_1.xml  topology_10.xml  topology_100.xml  topology_101.xml  topology_102.xml  topology_103.xml  topology_104.xml  topology_105.xml  topology_106.xml  topology_107.xml  topology_108.xml  topology_109.xml  topology_11.xml  topology_110.xml  topology_111.xml  topology_112.xml  topology_113.xml  topology_114.xml  topology_115.xml  topology_116.xml  topology_117.xml  topology_118.xml  topology_119.xml  topology_12.xml  topology_120.xml  topology_121.xml  topology_122.xml  topology_123.xml  topology_124.xml  topology_125.xml  topology_13.xml  topology_14.xml  topology_15.xml  topology_16.xml  topology_17.xml  topology_18.xml  topology_19.xml  topology_2.xml  topology_20.xml  topology_21.xml  (+85 more)
src/: CMakeLists.txt  main.cpp  util.cpp
src/delay_modeling/: delay_model.cpp  delay_model.h
src/design_space_exp/: design_space_exp.cpp  design_space_exp.h  flow_gen.cpp  flow_gen.h
src/include/: debug_config.h  eval_parameters.h  flow_factory.h  netdesign_factory.h  netview_factory.h  topo_factory.h  util.h
src/modules/: flow_factory.cpp  netdesign_factory.cpp  netview_factory.cpp  topo_factory.cpp
src/routing_strategies/: adaptive_routing.cpp  adaptive_routing.h
(+415 files in other folders)
